# VisionHTTPS

./: CMakeLists.txt  README.md  vision.conf
cmake/: compiler_flags.cmake  platform_detect.cmake
include/vision/: platform.h
platform/linux/: CMakeLists.txt  socket.c  syscall.asm
platform/macos/: CMakeLists.txt  kqueue.c  socket.c  syscall.S
platform/win32/: CMakeLists.txt  iocp.c  mem_ops.c  socket.c  syscall.asm
src/: CMakeLists.txt  config.c  config.h  main.c
src/arch/arm64/: CMakeLists.txt  cpuid_arm.c
src/arch/x86_64/: CMakeLists.txt  aesni.asm  cpuid.c
src/crypto/: CMakeLists.txt  aes_gcm.c  aes_gcm.h  chacha20.c  chacha20.h  hmac.c  hmac.h  sha256.c  sha256.h  x25519.c  x25519.h
src/http/: CMakeLists.txt  parser.c  parser.h  response.c
src/mem/: CMakeLists.txt  arena.c  arena.h  slab.c  slab.h
src/net/: CMakeLists.txt  connection.c  connection.h  event_loop.c
src/router/: CMakeLists.txt  router.c  router.h
src/tls/: CMakeLists.txt  handshake.c  handshake.h  record.c  record.h
tests/: CMakeLists.txt  test_aes_gcm.c  test_chacha20.c  test_http.c  test_mem.c  test_runner.c  test_sha256.c  test_x25519.c
